<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <PreferenceCategory
                android:title="@string/touchscreen_subcat_title">
    <com.cyanogenmod.settings.device.TouchscreenSensitivity
                android:key="touchscreen_sensitivity"
                android:title="@string/touchscreen_sensitivity_title_head"
                android:summary="@string/touchscreen_sensitivity_summary_head"
                android:entries="@array/touchscreen_sensitivity_entries"
                android:entryValues="@array/touchscreen_sensitivity_entries_values"
                android:defaultValue="70" />
    </PreferenceCategory>
    <PreferenceCategory
                android:title="@string/screencast_subcat_title">
    <!-- Mirroring Enabled -->
    <CheckBoxPreference
                android:key="mirroring_enabled"
                android:title="@string/mirroring_title_head"
                android:summary="@string/mirroring_summary_head"
                android:defaultValue="false" />
    <!-- Remote Display Enabled -->
    <CheckBoxPreference
                android:key="remote_display_enabled"
                android:title="@string/remote_display_title_head"
                android:summary="@string/remote_display_summary_head"
                android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
